--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -226,17 +226,22 @@ Landing Page
 /* Hero section */
 
 .landing-page-hero-wrapper {
-  background: #f0e3da;
+  background: #f0e1e0;
   padding: 4rem 0;
 }
 
+.lg-landing-page-hero-wrapper {
+  display: none;
+}
+
 .landing-page-hero-container {
+  height: 100%;
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
 
   display: grid;
-  align-items: center;
+  align-items: start;
   gap: 2rem;
 }
 
@@ -405,7 +410,8 @@ Landing Page
 
 /* Landing page posts */
 .landing-page-posts-container {
-  background: #f0e3da;
+  /* background: #f0e3da; */
+  background: #f0e1e0;
   padding: 3rem 0;
 }
 
@@ -671,16 +677,29 @@ Landing Page
 }
 
 @media screen and (min-width: 900px) {
+  .landing-page-hero-wrapper {
+    display: none;
+  }
+  .lg-landing-page-hero-wrapper {
+    display: block;
+    min-height: 80vh;
+    background: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.5), hsla(22, 61%, 7%, 0.5)),
+    url('./images/hero_img1.webp');
+    background-position: center right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: grid;
+    align-content: stretch;
+  }
+
   .landing-page-hero-container {
     align-items: center;
-    grid-template-columns: calc(42% - 40px) calc(58% - 40px);
-    gap: 5rem;
   }
 
-  .landing-page-hero-img {
-    order: 2
+  .landing-page-hero-text-wrapper {
+    width: 50%;
   }
-
+  
   .landing-page-hero-text-wrapper {
     text-align: start;
     max-width: initial;
@@ -688,7 +707,12 @@ Landing Page
   }
 
   .landing-page-hero-header {
-    font-size: clamp(2rem, 5vw + 1rem, 2.3rem);
+    font-size: clamp(2rem, 5vw + 1rem, 3.3rem);
+    color: white;
+  }
+
+  .landing-page-hero-paragraph {
+    color: var(--black-80)
   }
 
   .landing-page-join-btn {
@@ -704,26 +728,9 @@ Landing Page
 @media screen and (min-width: 1100px) {
 
   .landing-page-hero-header {
-    font-size: clamp(2rem, 5vw + 1rem, 3.1rem);
+    font-size: clamp(2rem, 5vw + 1rem, 3.7rem);
   }
 }
-
-@media screen and (min-width: 1200px) {
-
-  .landing-page-hero-img > img {
-    width: 100%;
-    height: 100%;
-    aspect-ratio: 4/3;
-    object-fit: cover;
-    display: block;
-    object-position: right;
-  }
-
-  .landing-page-hero-header {
-    font-size: clamp(2rem, 5vw + 1rem, 3.4rem);
-  }
-}
-
 
 /* 
 ======
@@ -2961,7 +2968,7 @@ FOOTER
 ====== */
 .footer-container {
   height: 50vh;
-  background: #886854
+  background: #664b48
 }
 
 
