--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -65,7 +65,7 @@ body {
 }
 
 main {
-  background: var(--black-95);
+  /* background: var(--black-95); */
 }
 
 /* loading */
@@ -99,6 +99,58 @@ main {
     transform: rotate(360deg);
   }
 }
+
+/* Color overlay on mobile */
+.bg-overlay {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.700);
+}
+
+.hide-bg-overlay {
+  display: none;
+}
+
+.bg-img {
+  min-height: 50vh;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.63),rgba(0, 0, 0, 0.63)),
+              url('./images/hero_img.webp');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+}
+
+.bg-img-header-container {
+  display: grid;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+.bg-img-contents {
+  display: grid;
+  align-self: center;
+  gap: 0.8rem;
+  max-width: 500px;
+}
+
+.bg-img-header {
+  color: white;
+  font-size: clamp(2rem, 5vw + 1rem, 3.4rem);
+}
+
+.bg-img-text {
+  color: var(--black-80);
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+  font-size: clamp(1rem, 1vw + 16px, 1.1rem);
+}
+
 /* 
 ============
 Landing Page
@@ -215,16 +267,18 @@ Landing Page
 
 .landing-page-navlink {
   color: var(--orange-20);
-  font-weight: 500;
-  letter-spacing: 0.05rem;
   font-size: 1rem;
   padding: 0 2rem;
   border-bottom: 2px solid transparent;
-  transition: color 500ms linear, border-bottom 500ms linear;
+}
+
+@media (hover) {
+  .landing-page-navlink:hover {
+    color: rgb(240, 62, 8);
+  }
 }
 
 /* Hero section */
-
 .landing-page-hero-wrapper {
   background: #e7ded5;
   padding-bottom: 3rem;
@@ -318,13 +372,13 @@ Landing Page
 .landing-page-topics {
   display: grid;
   align-self: start;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .landing-page-topic {
   display: grid;
-  align-content: stretch;
-  gap: 1rem;
+  align-content: start;
+  gap: 1.5rem;
 }
 
 .landing-page-topic-image {
@@ -337,8 +391,8 @@ Landing Page
 
 .landing-page-topic-text-container {
   display: grid;
-  align-content: stretch;
-  gap: 1rem;
+  align-content: start;
+  gap: 0.5rem;
 }
 
 .landing-page-topic-name {
@@ -360,7 +414,7 @@ Landing Page
   color:#ff3d24;
   text-decoration:underline;
   letter-spacing: 0.05rem;
-  margin-left: 0.3rem;
+  /* margin-left: 0.5rem; */
 }
 
 .landing-page-topic-post-count {
@@ -368,6 +422,7 @@ Landing Page
   align-items: start;
   gap: 0.3rem;
   color: var(--black-60);
+  margin-top: 0.5rem;
 }
 
 .landing-page-topic-num-of-post {
@@ -411,7 +466,7 @@ Landing Page
 
 .landing-page-posts-wrapper {
   width: 90%;
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
   display: grid;
   gap: 3rem;
@@ -570,20 +625,6 @@ Landing Page
 }
 /* end */
 
-.bg-overlay {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.700);
-}
-
-.hide-bg-overlay {
-  display: none;
-}
-
 @media screen and (min-width: 500px) {
 
   .landing-page-post-image{
@@ -647,7 +688,6 @@ Landing Page
 
   .landing-page-topics {
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 3rem
   }
 
   .landing-page-posts-container {
@@ -685,7 +725,7 @@ Landing Page
     display: block;
     min-height: 75vh;
     background: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.5), hsla(22, 61%, 7%, 0.5)),
-    url('./images/hero_img1.webp');
+    url('./images/landing_page.webp');
     background-position: center right;
     background-repeat: no-repeat;
     background-size: cover;
@@ -740,10 +780,9 @@ Landing Page
 /* 
 ======
 NAVBAR 
-====== 
-*/
-.navbar-container{
-  box-shadow: 0px 3px 6px -1px rgb(206, 206, 206);
+====== */
+.navbar-container {
+  position: relative;
 }
 
 .navbar-wrapper {
@@ -768,7 +807,7 @@ NAVBAR
   object-fit: cover;
   border-radius: 50%;
   display: block;
-  background: rgb(104, 0, 104);
+  background: hsl(0, 0%, 20%);
   padding: 0.3rem
 }
 
@@ -803,48 +842,39 @@ NAVBAR
   font-weight: 500;
 }
 
-.navbar-navlinks-toggle-btns {
+.navbar-show-navlink-btn {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.navbar-toggle-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgb(43, 43, 43);
+  color: var(--black-30);
   background: none;
   border: none;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
 }
 
 /* Large navlinks */
 .lg-navbar-navlinks {
   display: none;
 }
+
 /* end */
 
 .navbar-navlinks {
   position: absolute;
   z-index: 3;
-  top: 90px;
+  top: 0;
   right: -300px;
   white-space: nowrap;
   overflow: hidden;
   max-width: 0;
-  height: calc(100vh - 100px);
-
+  height: 100vh;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   align-items: start;
   gap: 1.5rem;
-  padding: 1.5rem 0;
-
-  border-radius: 8px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  background: rgb(238, 238, 238);
+  padding: 2rem 0;
+  background: white;
   transition: max-width 300ms linear, right 300ms linear;
 }
 
@@ -854,34 +884,31 @@ NAVBAR
   max-width: 300px;
 }
 
-.lg-navbar-user-account {
-  display: none;
-}
-
-.navbar-user-account {
+.navbar-hide-navlink-btn {
   width: 100%;
-  display: grid;
-}
-
-.navbar-user-account-image-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 1rem;
+  justify-content: end;
+  color: var(--black-30);
+  background: none;
+  border: none;
+  font-size: 1.8rem;
   padding: 0 2rem;
-  padding-bottom: 0.5rem;
-  cursor: pointer;
-  border-bottom: 1px solid lightgray;
 }
 
-.nav-bar-user-image  {
-  display: flex; 
-  gap: 0.5rem;
+/* .navbar-user-account-image-container {
+  width: 100%;
+  display: flex;
   align-items: center;
+  justify-content: start;
+  padding: 0 2rem;
+  padding-bottom: 1rem;
+  gap: 1rem;
+  border-bottom: 1px solid var(--black-80);
 }
 
-.nav-bar-user-image > img {
-  width: 50px;
+.navbar-user-profile-image {
+  width: 40px;
   display: block;
   height: auto;
 }
@@ -889,118 +916,81 @@ NAVBAR
 .navbar-user-useranme {
   font-size: 0.9rem;
   font-weight: 500;
-}
+} */
 
-.navbar-user-account-menu {
-  display: grid;
-  gap: 1.5rem;
-  background: rgb(212, 212, 212);
-
-  max-height: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  opacity: 0;
-  transition: opacity 100ms linear;
-}
-
-.show-navbar-user-account-menu {
-  max-height: 500px;
-  padding: 1.5rem 2rem;
-  opacity: 1;
-}
-
-.navbar-user-account-menu > 
-.navbar-navlink{
-  justify-self: start;
-  margin-left: 0;
-  color: rgb(0, 0, 0);
-}
-
-.navbar-user-menu-tobble-btn {
+/* .navbar-user-menu-tobble-btn {
   background: none;
   border: none;
   font-size: 1rem;
   color: rgb(88, 88, 88);
-}
+} */
 
 .navbar-navlink {
-  color: rgb(0, 0, 0);
-  letter-spacing: 0.05rem;
+  width: 100%;
+  color: var(--orange-20);
   font-size: 1rem;
-  margin-left: 2rem;
-  font-weight: 500;
+  padding: 0 2rem;
+
 }
 
 .navbar-active-navlink {
-  color: rgb(240, 62, 8) !important;
+  color: rgb(240, 62, 8);
   font-weight: 600;
-  border-bottom: 2px solid rgb(240, 62, 8) !important;
+}
+.navbar-navlink-logout-btn-container {
+  width: 100%;
+  display: grid;
+}
+.navbar-navlink-logout-btn {
+  margin: 1rem 2rem 0 2rem;
+  padding: 0.8rem 1.5rem;
+  border-radius: 5px;
+  background: #ff3d24;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 0.05rem;
 }
 
-@media screen and (min-width: 700px) {
- 
-  .navbar-navlinks-toggle-btns {
-    display: none;
+@media screen and (min-width: 930px) {
+  .navbar-container {
+    position: initial;
   }
 
   .navbar-navlinks {
     display: none;
   }
 
+  .navbar-show-navlink-btn {
+    display: none;
+  }
+
+  .navbar-hide-navlink-btn {
+    display: none;
+  }
+
   .lg-navbar-navlinks {
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: 1.5rem;
   }
 
   .navbar-navlink {
+    text-wrap: nowrap;
     padding: 0;
-    margin-left: 0;
-    border-bottom: 2px solid transparent !important;
-    transition: border-bottom 500ms linear;
   }
 
   .navbar-active-navlink {
     color: rgb(240, 62, 8) !important;
     font-weight: 600;
-    border-bottom: 2px solid rgb(240, 62, 8) !important;
   }
 
   @media (hover) {
     .navbar-navlink:hover {
       color: rgb(240, 62, 8);
-      border-bottom: 2px solid rgb(240, 62, 8) !important;
     }
-  }
-
-  .navbar-user-account {
-    display: none;
-  }
-
-  .lg-navbar-user-account {
-    width: initial;
-    display: grid;
-    gap: 1rem;
-  }
-
-  .navbar-user-account-image-container {
-    padding: 0;
-    padding-bottom: 0;
-    border-bottom: none;
-  }
-
-  .nav-bar-user-image > img {
-    width: 35px;
-    display: block;
-    height: auto;
-  }
-
-  .navbar-user-account-menu {
-    position: absolute;
-    z-index: 2;
-    top: 80px;
-    width: 200px;
-    border-radius: 5px;
   }
 }
 
@@ -1008,18 +998,44 @@ NAVBAR
 ======
 Topics
 ====== */
-.bg-img {
-  min-height: 55vh;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0)),
-              url('./images/hero_img.webp');
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 
 .topics-error-message {
   color: var(--red-45);
-  letter-spacing: 0.07rem;
+  letter-spacing: 0.07rem;.bg-img {
+    min-height: 50vh;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.63),rgba(0, 0, 0, 0.63)),
+                url('./images/hero_img.webp');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: grid;
+  }
+  
+  .bg-img-header-container {
+    display: grid;
+    width: 90%;
+    margin: 0 auto;
+    max-width: 1200px;
+  }
+  
+  .bg-img-contents {
+    display: grid;
+    align-self: center;
+    gap: 0.8rem;
+    max-width: 500px;
+  }
+  
+  .bg-img-header {
+    color: white;
+    font-size: clamp(2rem, 5vw + 1rem, 3.4rem);
+  }
+  
+  .bg-img-text {
+    color: var(--black-80);
+    letter-spacing: 0.07rem;
+    line-height: 1.5;
+    font-size: clamp(1rem, 1vw + 16px, 1.1rem);
+  }
   font-weight: 500;
   width: 90%;
   max-width:1200px;
